//
// Copyright 2025 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package scql.engine.negotiate;

import "api/engine.proto";

message StreamingOptions {
  int64 streaming_row_num_threshold = 1;
  int64 batch_row_num = 2;
}

message PsiOptions {
  int64 unbalance_psi_ratio_threshold = 1;
  int64 unbalance_psi_larger_party_rows_count_threshold = 2;
  int32 psi_curve_type = 3;
  bool use_rr22_low_comm_mode = 4;
}

message NegotiationOptions {
  StreamingOptions streaming_options = 1;
  PsiOptions psi_options = 2;
}
